fix menu height on mobile

--- a/style.css
+++ b/style.css
@@ -758,11 +758,10 @@ text-decoration: none;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    /* opacity: 0;  */
   }
   .nav.active {
     background-color: #333;
-    height: 100vh;
+    height: 100%;
   }
   .nav__links {
     display: none;
